--- a/intercom-plugin/plugin.xml
+++ b/intercom-plugin/plugin.xml
@@ -10,7 +10,7 @@
     <engines>
       <engine name="cordova" version=">=12.0.0" />
       <engine name="cordova-android" version=">=13.0.0" />
-      <engine name="cordova-ios" version="7.1.0" />
+      <engine name="cordova-ios" version=">=7.1.0" />
     </engines>
 
     <js-module name="Intercom" src="www/intercom.js">
